fix: Remove overflow hidden

--- a/styles/article.sass
+++ b/styles/article.sass
@@ -119,7 +119,6 @@ $color: #D88C9A
     line-height: 1.6
     padding: 42px 0
     width: 100%
-    overflow: hidden
 
   &__ending
     padding: 30px 0
